chore: make public, add proper name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-ts-template",
-  "private": true,
+  "name": "apple-system-window",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
